src/index.less
*, *:before, *:after {
  box-sizing: border-box;
}

html {
  font-family:
    -apple-system,
    BlinkMacSystemFont,
    "Segoe UI",
    Helvetica,
    Arial,
    sans-serif;
  line-height: 1.5;
}

body {
  margin: 10px;
}

h1 {
  font-size: 32px;
  font-weight: 400;
  line-height: 1.125;
  word-wrap: break-word;
}

code, pre, textarea {
  font-family:
    "SFMono-Regular",
    Consolas,
    "Liberation Mono",
    Menlo,
    Courier,
    monospace;
  font-size: 14px;
}

textarea {
  width: 100%;

  border: 1px solid darkgray;
  border-radius: 4px;
  padding: 6px;
}

section {
  display: grid;
  grid-column-gap: 20px;
  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));

  @media screen and (min-width: 1000px) {
    grid-template-columns: repeat(2, minmax(400px, 1fr));
  }
}

